--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-FEATS
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FEATS</title>
+
+    <!-- Google Fonts: Roboto (Helvetica Neue alternative) -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo-container">
+            <a href="https://www.ias.informatik.tu-darmstadt.de/" target="_blank"><img src="assets/images/IAS_vectorized.svg" alt="IAS"></a>
+            <a href="https://www.dfki.de/" target="_blank"><img src="assets/images/DFKI.svg" alt="Logo 2"></a>
+            <a href="https://hessian.ai/" target="_blank"><img src="assets/images/hessian_ai-2.webp" alt="Logo 3"></a>
+            <a href="https://www.tu-darmstadt.de/" target="_blank"><img src="assets/images/TU_Darmstadt_Logo.svg" alt="Logo 4"></a>
+        </div>
+    </header>
+
+    <div class="container">
+        <h1>Learning Force Distribution Estimation for the GelSight Mini <br> Optical Tactile Sensor Based on Finite Element Analysis</h1>
+
+        <video controls>
+            <source src="assets/videos/FEATS.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+        <p class="abstract">
+            Contact-rich manipulation remains a major challenge in robotics. Optical tactile sensors like GelSight Mini 
+            offer a low-cost solution for contact sensing by capturing soft-body deformations of the silicone gel. However, 
+            accurately inferring shear and normal force distributions from these gel deformations has yet to be fully addressed. 
+            In this work, we introduce FEATS -- Finite Element Analysis for Tactile Sensing -- a machine learning 
+            approach using a U-net architecture to predict force distributions directly from the sensor's raw images. 
+            Our model, trained on force distributions inferred from Finite Element Analysis, demonstrates promising 
+            accuracy in predicting normal and shear force distributions. It also shows potential for generalization 
+            across sensors of the same type and for enabling real-time application.
+        </p>
+    </div>
+</body>
+</html>
