--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="repo-dataset-container">
                 <div class="repo-card" data-repo="feats-ai/feats" data-theme="dark-theme"></div>
                 <div class="dataset-info">
-                    <p>Dataset will be available soon!</p>
+                    <a href="https://archimedes.ias.informatik.tu-darmstadt.de/s/LWJxkmxrnPTSqTp" target="_blank"><img src="assets/images/folder.svg" alt="Folder Icon" class="dataset-image"></a>
+                    <p><a href="https://archimedes.ias.informatik.tu-darmstadt.de/s/LWJxkmxrnPTSqTp" targe="_blank">FEATS Dataset</a></p>
                 </div>
             </div>
 
@@ -119,11 +120,6 @@
 }
                 </pre>
             </div>
-
-            <hr class="section-divider">
-
-            <h2>U-net Force Distribution Estimation Experiments</h2>
-            <p class="paper">Will be added soon!</p>
         </div>
     </body>
 
