--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="https://www.ias.informatik.tu-darmstadt.de/" target="_blank"><img src="assets/images/IAS_vectorized.svg" alt="IAS"></a>
                 <a href="https://www.dfki.de/" target="_blank"><img src="assets/images/DFKI.svg" alt="DFKI"></a>
                 <a href="https://hessian.ai/" target="_blank"><img src="assets/images/hessian_ai-2.webp" alt="HessianAI"></a>
+                <a href="https://www.lab3.org" target="_blank"><img src="assets/images/LAB3.png" alt="LAB3"></a>
                 <a href="https://www.tu-darmstadt.de/" target="_blank"><img src="assets/images/TU_Darmstadt_Logo.svg" alt="TUDa"></a>
             </div>
         </header>
@@ -46,12 +47,12 @@
             
             <h2>Paper</h2>
             <p class="paper">
-                Latest version: <a href="" target="_blank">arXiv</a> <br>
+                Latest version: <a href="https://www.ias.informatik.tu-darmstadt.de/uploads/Team/NiklasFunk/feats.pdf" target="_blank">feats.pdf</a> <br>
                 Submitted to IEEE International Conference on Robotics & Automation (ICRA) 2025 (under review)
             </p>
             
             <div class="paper-container">
-                <a href="" target="_blank"><img src="assets/images/paper.png" alt="Paper"></a>
+                <a href="https://www.ias.informatik.tu-darmstadt.de/uploads/Team/NiklasFunk/feats.pdf" target="_blank"><img src="assets/images/paper.png" alt="Paper"></a>
             </div>
 
             <br><h2>Code and Dataset</h2>
