--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
             <h2>Paper</h2>
             <p class="paper">
                 Latest version:
-                <a
-                    href="https://arxiv.org/abs/2411.03315"
-                    target="_blank"
+                <a href="https://arxiv.org/abs/2411.03315" target="_blank"
                     >arXiv</a
+                >
                 <br />
                 Submitted to IEEE International Conference on Robotics &
                 Automation (ICRA) 2025 (under review)
