update citing; add NeurIPS paper

--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
             <h2>Paper</h2>
             <p class="paper">
                 Latest version:
+                <a href="https://openreview.net/forum?id=vnCiIzmnXe" target="_blank"
+                    >OpenReview</a
+                >
+                <br />
+                Accepted at 2nd Workshop on Touch Processing: From Data to Knowledge (NeurIPS 2024)
+            </p>
+
+            <div class="paper-container">
+                <a
+                    href="https://openreview.net/pdf?id=vnCiIzmnXe"
+                    target="_blank"
+                    ><img src="assets/images/paper_NeurIPS.png" alt="Paper"
+                /></a>
+            </div>
+
+            <p class="paper">
+                Latest version:
                 <a href="https://arxiv.org/abs/2411.03315" target="_blank"
                     >arXiv</a
                 >
@@ -84,9 +101,9 @@
 
             <div class="paper-container">
                 <a
-                    href="https://www.ias.informatik.tu-darmstadt.de/uploads/Team/NiklasFunk/feats.pdf"
+                    href="https://arxiv.org/pdf/2411.03315"
                     target="_blank"
-                    ><img src="assets/images/paper.png" alt="Paper"
+                    ><img src="assets/images/paper_ICRA.png" alt="Paper"
                 /></a>
             </div>
 
@@ -194,12 +211,14 @@
             <h2>BibTeX</h2>
             <div class="terminal">
                 <pre>
-@misc{FEATS2024,
-    author       = {Helmut, Erik and Dziarski, Luca and Funk, Niklas and Belousov, Boris and Peters, Jan},
-    title        = {Learning Force Distribution Estimation for the GelSight Mini Optical Tactile Sensor Based on Finite Element Analysis},
-    howpublished = {Submitted to IEEE International Conference on Robotics and Automation (ICRA) 2025},
-    note         = {Under review},
-    year         = {2024},
+@misc{helmut2024feats,
+    title={Learning Force Distribution Estimation for the GelSight Mini Optical Tactile Sensor Based on Finite Element Analysis},
+    author={Erik Helmut and Luca Dziarski and Niklas Funk and Boris Belousov and Jan Peters},
+    year={2024},
+    eprint={2411.03315},
+    archivePrefix={arXiv},
+    primaryClass={cs.RO},
+    url={https://arxiv.org/abs/2411.03315},
 }
                 </pre>
             </div>
