--- a/index.html
+++ b/index.html
@@ -71,9 +71,26 @@
 
             <hr class="section-divider" />
 
+            <p class="paper">
+                Preprint:
+                <a href="https://arxiv.org/abs/2411.03315" target="_blank"
+                    >arXiv</a
+                >
+                <br />
+                Submitted to IEEE International Conference on Intelligent Robots and Systems (IROS) 2025 (under review)
+            </p>
+
+            <div class="paper-container">
+                <a
+                    href="https://arxiv.org/pdf/2411.03315"
+                    target="_blank"
+                    ><img src="assets/images/paper_IROS.png" alt="Paper"
+                /></a>
+            </div>
+
             <h2>Paper</h2>
             <p class="paper">
-                Latest version:
+                Workshop Version:
                 <a href="https://openreview.net/forum?id=vnCiIzmnXe" target="_blank"
                     >OpenReview</a
                 >
@@ -86,24 +103,6 @@
                     href="https://openreview.net/pdf?id=vnCiIzmnXe"
                     target="_blank"
                     ><img src="assets/images/paper_NeurIPS.png" alt="Paper"
-                /></a>
-            </div>
-
-            <p class="paper">
-                Latest version:
-                <a href="https://arxiv.org/abs/2411.03315" target="_blank"
-                    >arXiv</a
-                >
-                <br />
-                Submitted to IEEE International Conference on Robotics &
-                Automation (ICRA) 2025 (under review)
-            </p>
-
-            <div class="paper-container">
-                <a
-                    href="https://arxiv.org/pdf/2411.03315"
-                    target="_blank"
-                    ><img src="assets/images/paper_ICRA.png" alt="Paper"
                 /></a>
             </div>
 
