--- a/index.html
+++ b/index.html
@@ -53,20 +53,17 @@
             </div>
 
             <p class="abstract">
-                Contact-rich manipulation remains a major challenge in robotics.
-                Optical tactile sensors like GelSight Mini offer a low-cost
-                solution for contact sensing by capturing soft-body deformations
-                of the silicone gel. However, accurately inferring shear and
-                normal force distributions from these gel deformations has yet
-                to be fully addressed. In this work, we introduce FEATS --
-                Finite Element Analysis for Tactile Sensing -- a machine
-                learning approach using a U-net architecture to predict force
-                distributions directly from the sensor's raw images. Our model,
-                trained on force distributions inferred from Finite Element
-                Analysis, demonstrates promising accuracy in predicting normal
-                and shear force distributions. It also shows potential for
-                generalization across sensors of the same type and for enabling
-                real-time application.
+                Contact-rich manipulation remains a major challenge in robotics. 
+                Optical tactile sensors like GelSight Mini offer a low-cost solution 
+                for contact sensing by capturing soft-body deformations of the silicone gel. 
+                However, accurately inferring shear and normal force distributions 
+                from these gel deformations has yet to be fully addressed. In this work, 
+                we propose a machine learning approach using a U-net architecture to predict 
+                force distributions directly from the sensor's raw images. Our model, 
+                trained on force distributions inferred from Finite Element Analysis (FEA), 
+                demonstrates promising accuracy in predicting normal and shear force distributions 
+                for the commercially available GelSight Mini sensor. It also shows potential for 
+                generalization across indenters, sensors of the same type, and for enabling real-time application.
             </p>
 
             <hr class="section-divider" />
