--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                 for contact sensing by capturing soft-body deformations of the silicone gel. 
                 However, accurately inferring shear and normal force distributions 
                 from these gel deformations has yet to be fully addressed. In this work, 
-                we propose a machine learning approach using a U-net architecture to predict 
+                we introduce FEATS -- Finite Element Analysis for Tactile Sensing --
+                a machine learning approach using a U-net architecture to predict 
                 force distributions directly from the sensor's raw images. Our model, 
-                trained on force distributions inferred from Finite Element Analysis (FEA), 
+                trained on force distributions inferred from Finite Element Analysis, 
                 demonstrates promising accuracy in predicting normal and shear force distributions 
                 for the commercially available GelSight Mini sensor. It also shows potential for 
                 generalization across indenters, sensors of the same type, and for enabling real-time application.
