--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 ></div>
                 <div class="dataset-info">
                     <a
-                        href="https://archimedes.ias.informatik.tu-darmstadt.de/s/LWJxkmxrnPTSqTp"
+                        href="https://drive.google.com/drive/folders/1kxUcK0YcSiE9qeQPsUWe_fNc_h1WPYkS?usp=sharing"
                         target="_blank"
                         ><img
                             src="assets/images/folder.svg"
@@ -123,7 +123,7 @@
                     /></a>
                     <p>
                         <a
-                            href="https://archimedes.ias.informatik.tu-darmstadt.de/s/LWJxkmxrnPTSqTp"
+                            href="https://drive.google.com/drive/folders/1kxUcK0YcSiE9qeQPsUWe_fNc_h1WPYkS?usp=sharing"
                             targe="_blank"
                             >FEATS Dataset</a
                         >
